# opengl_example

./: .gitignore  CMakeLists.txt  README.md  compile.sh
cmake/: Common.cmake  OpenGL.cmake  YCM.cmake
evaluator/: CMakeLists.txt  evaltest.c
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
image/: CMakeLists.txt  Coordinates.cpp  CreateShader.h  HelloTriangle.cpp  ImageTest.cpp  Movement.h  Shaders.cpp  Textures.cpp  Transformations.cpp
image/fs/: transform.c
image/vs/: coordinates.c  positions_and_colors.c  texture.c  transform.c
